# assignment-image-rotation

solution/: CMakeLists.txt
solution/include/: bmp.h  image.h  transf.h  transfo.h
solution/src/: bmp.c  image.c  main.c  transf.c
